# web

./: .gitignore
isa/: .env  main.ipynb  pyproject.toml
qa/: .env  gpt_server.ipynb  pyproject.toml
steam-games/: eva.ipynb  parse.py  pyproject.toml  test.ipynb
steam-games/eva_db/index/: FAISS_game_vector_idx.index
svelte-app/: package-lock.json  package.json
svelte-app/public/: global.css
svelte-app/scripts/: chatgpt-api.js
svelte-app/src/: App.svelte  ConnectingLine.svelte  DummyNode.svelte  DummyNodeRed.svelte  DynamicNode.svelte  HoverInfoItem.svelte  HoverInfoPopup.svelte  NodeCourse.svelte  NodeGame.svelte  NodeGeneratorButton.svelte  NodeLarge.svelte  NodeProf.svelte  NodeSmall.svelte  NodeVideo.svelte  NodeWikipedia.svelte  NodeWord.svelte  OpenAIPrompter.svelte  QAButton.svelte  SelectorDropdownDataset.svelte  SelectorDropdownFunction.svelte  Toolbar.svelte  Web.svelte  ask.js  gamesDatabase.js  position.js  stores.js
videos/: build.ipynb  main.py  pyproject.toml
videos/eva_db/: evadb.db
videos/eva_db/index/: FAISS_videos_vector_idx.index
words/: build.ipynb  pyproject.toml
words/eva_db/: evadb.db
